--- a/app/src/main/res/layout/game1.xml
+++ b/app/src/main/res/layout/game1.xml
@@ -55,7 +55,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="130dp"
             android:text="Tap to Play"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="30sp"
             android:textStyle="bold" />
 
